CSSLint demo in content script

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	  "description": "CSS, Y U No Work",
 	  "devtools_page": "ycss_devtools.html",
 	  "manifest_version": 2,
-	  "permissions": ["tabs", "http://*/*", "https://*/*"],
+	  "permissions": ["tabs", "file:///*/*", "http://*/*", "https://*/*"],
 	  "background": {
 		 "scripts": [
 		   "background.js"
